--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,23 @@
 spring.application.name=skillConnectBackend
 # Database connection details
 spring.datasource.url=jdbc:mysql://localhost:3306/skill_connect
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=Skill@123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 	
 spring.jpa.show-sql=true  
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+spring.security.enabled=false
+
+spring.jpa.properties.hibernate.format_sql=true
+
+logging.level.com.example.skillConnectBackend=DEBUG
+logging.level.org.hibernate=ERROR
+spring.graphql.enabled=true
+spring.graphql.endpoint=/graphql
+server.error.include-message=always
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.boot=DEBUG
